@@ -438,3 +438,11 @@ def test_sdist_latest(tmpdir, newconfig):
     session = Session(config)
     sdist_path = session.sdist()
     assert sdist_path == p
+
+def test_envsitepackagesdir(cmd, initproj):
+    initproj("pkg512-0.0.5", filedefs={
+        'tox.ini': """
+        commands=
+            grep '__version__.*=.*0\.0\.5' {envsitepackagesdir}/pkg512/__init__.py
+    """})
+    result = cmd.run("tox")
